--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,17 +24,17 @@ jobs:
        - name: Install Deps
          run: jf npm install
            
-       - name: Run tests
-         run: npm test
+       - name: Build Project
+         run: npm run build
          
        - name: Publish
          run: jf npm publish
          
        - name: Publish Build info With JFrog CLI
          run: |
-          # Collect environment variables for the build
-          jf rt build-collect-env
-          # Collect VCS details from git and add them to the build
-          jf rt build-add-git
-          # Publish build info
-          jf rt build-publish
+           # Collect environment variables for the build
+           jf rt build-collect-env
+           # Collect VCS details from git and add them to the build
+           jf rt build-add-git
+           # Publish build info
+           jf rt build-publish
