--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,23 @@
-# .github/workflows/playwright-test.yml
-
-name: Playwright Tests
-
-on:
+name: "JFrog NPM Integration Example"
+on: 
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
-  playwright:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js environment
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up JFrog CLI
+        uses: jfrog/setup-jfrog-cli@v4
+        env:
+          JF_URL: https://knra.jfrog.io 
         with:
-          node-version: '16'
-
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: npm install
-
-      # Step 4: Install Playwright Browsers
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-
-      # Step 5: Run Playwright tests and generate HTML report
-      - name: Run Playwright Tests
-        run: npx playwright test --reporter=html
-
-      # Step 6: Upload the HTML report as an artifact
-      - name: Upload Playwright Test Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: playwright-report
-          path: playwright-report
+          oidc-provider-name: github-jfrog 
+          oidc-audience: my-aud
