--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,17 @@ jobs:
        - name: Build Project
          run: npm run build
          
-       - name: Archive Artifacts into Zip
-         run: zip -r build.zip build/
+       - name: Get Current Timestamp
+         id: vars
+         run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+         
+       - name: Archive Artifacts into Zip with Timestamp
+         run: zip -r build_${{ env.TIMESTAMP }}.zip build/
          
        - name: Push Artifacts to JFrog
          run: |
-           # Upload the zip file to the specified path in JFrog Artifactory
-           jf rt u "build.zip" "knnpm-npm/path/to/artifacts/build.zip"
+           # Upload the zip file with timestamp in its name to JFrog Artifactory
+           jf rt u "build_${{ env.TIMESTAMP }}.zip" "knnpm-npm/path/to/artifacts/build_${{ env.TIMESTAMP }}.zip"
          
        - name: Publish
          run: jf npm publish
