--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,15 +38,15 @@ jobs:
         id: vars
         run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
         
-      # Archive the build directory into a zip file with a timestamp
-      - name: Archive Artifacts into Zip with Timestamp
-        run: zip -r build_${{ env.TIMESTAMP }}.zip build/
+      # Archive the build directory into a .tgz file with a timestamp
+      - name: Archive Artifacts into TGZ with Timestamp
+        run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
         
-      # Push the compressed zip file to JFrog Artifactory
+      # Push the compressed .tgz file to JFrog Artifactory
       - name: Push Artifacts to JFrog
         run: |
-          # Upload the zip file with timestamp to JFrog Artifactory
-          jf rt u "build_${{ env.TIMESTAMP }}.zip" "knnpm-npm/path/to/artifacts/build_${{ env.TIMESTAMP }}.zip"
+          # Upload the .tgz file with timestamp to JFrog Artifactory
+          jf rt u "build_${{ env.TIMESTAMP }}.tgz" "knnpm-npm/path/to/artifacts/build_${{ env.TIMESTAMP }}.tgz"
         
       # Publish the npm package to JFrog Artifactory
       - name: Publish
